// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DreamState: locale-translation-accuracy should correctly detect and handle locale drift with invalid locale code: invalid-locale-render 1`] = `
{
  "cta": "Proceed",
  "emotionalSnapshot": "{"tone":"professional","trustScore":0.95,"emotionIntentHash":"static-hash-001","timestamp":"2025-05-23T00:00:00.000Z","locale":"xx-YY"}",
  "helperText": "[xx-YY] We've prepared a detailed analysis for your review.",
  "messageStyle": "professional",
  "traceId": "test-trace-001",
  "trustIndicator": "enhanced",
  "uiComponents": {
    "enableCTA": true,
    "htmlOutput": "
      <div class="emotional-container professional" data-trust="enhanced" data-tone="professional" data-locale="xx-YY">
        <div class="response-panel">
          <div class="content">This message has an invalid locale code.</div>
          <div class="helper-text">[xx-YY] We've prepared a detailed analysis for your review.</div>
        </div>
        <button class="cta-button">Proceed</button>
      </div>
    ",
    "messageFormat": "standard",
    "showHelper": true,
  },
  "usedFallback": false,
}
`;

exports[`DreamState: locale-translation-accuracy should maintain locale consistency across English, French, and Spanish payloads: en-professional-render 1`] = `
{
  "cta": "Proceed",
  "emotionalSnapshot": "{"tone":"professional","trustScore":0.95,"emotionIntentHash":"static-hash-001","timestamp":"2025-05-23T00:00:00.000Z","locale":"en-US"}",
  "helperText": "We've prepared a detailed analysis for your review.",
  "messageStyle": "professional",
  "traceId": "test-trace-001",
  "trustIndicator": "enhanced",
  "uiComponents": {
    "enableCTA": true,
    "htmlOutput": "
      <div class="emotional-container professional" data-trust="enhanced" data-tone="professional" data-locale="en-US">
        <div class="response-panel">
          <div class="content">Your strategy has been successfully created.</div>
          <div class="helper-text">We've prepared a detailed analysis for your review.</div>
        </div>
        <button class="cta-button">Proceed</button>
      </div>
    ",
    "messageFormat": "standard",
    "showHelper": true,
  },
  "usedFallback": false,
}
`;

exports[`DreamState: locale-translation-accuracy should maintain locale consistency across English, French, and Spanish payloads: es-professional-render 1`] = `
{
  "cta": "Proceder",
  "emotionalSnapshot": "{"tone":"professional","trustScore":0.95,"emotionIntentHash":"static-hash-001","timestamp":"2025-05-23T00:00:00.000Z","locale":"es-ES"}",
  "helperText": "Hemos preparado un análisis detallado para su revisión.",
  "messageStyle": "professional",
  "traceId": "test-trace-001",
  "trustIndicator": "enhanced",
  "uiComponents": {
    "enableCTA": true,
    "htmlOutput": "
      <div class="emotional-container professional" data-trust="enhanced" data-tone="professional" data-locale="es-ES">
        <div class="response-panel">
          <div class="content">Tu estrategia se ha creado con éxito.</div>
          <div class="helper-text">Hemos preparado un análisis detallado para su revisión.</div>
        </div>
        <button class="cta-button">Proceder</button>
      </div>
    ",
    "messageFormat": "standard",
    "showHelper": true,
  },
  "usedFallback": false,
}
`;

exports[`DreamState: locale-translation-accuracy should maintain locale consistency across English, French, and Spanish payloads: fr-professional-render 1`] = `
{
  "cta": "Procéder",
  "emotionalSnapshot": "{"tone":"professional","trustScore":0.95,"emotionIntentHash":"static-hash-001","timestamp":"2025-05-23T00:00:00.000Z","locale":"fr-FR"}",
  "helperText": "Nous avons préparé une analyse détaillée pour votre examen.",
  "messageStyle": "professional",
  "traceId": "test-trace-001",
  "trustIndicator": "enhanced",
  "uiComponents": {
    "enableCTA": true,
    "htmlOutput": "
      <div class="emotional-container professional" data-trust="enhanced" data-tone="professional" data-locale="fr-FR">
        <div class="response-panel">
          <div class="content">Votre stratégie a été créée avec succès.</div>
          <div class="helper-text">Nous avons préparé une analyse détaillée pour votre examen.</div>
        </div>
        <button class="cta-button">Procéder</button>
      </div>
    ",
    "messageFormat": "standard",
    "showHelper": true,
  },
  "usedFallback": false,
}
`;

exports[`DreamState: locale-translation-accuracy should preserve emotional tone when rendering gratitude across locales: en-grateful-render 1`] = `
{
  "cta": "Continue",
  "emotionalSnapshot": "{"tone":"grateful","trustScore":0.95,"emotionIntentHash":"static-hash-001","timestamp":"2025-05-23T00:00:00.000Z","locale":"en-US"}",
  "helperText": "Thank you for your input. We value your collaboration.",
  "messageStyle": "appreciative",
  "traceId": "test-trace-001",
  "trustIndicator": "enhanced",
  "uiComponents": {
    "enableCTA": true,
    "htmlOutput": "
      <div class="emotional-container appreciative" data-trust="enhanced" data-tone="grateful" data-locale="en-US">
        <div class="response-panel">
          <div class="content">Thank you for your valuable feedback. We appreciate your insights.</div>
          <div class="helper-text">Thank you for your input. We value your collaboration.</div>
        </div>
        <button class="cta-button">Continue</button>
      </div>
    ",
    "messageFormat": "standard",
    "showHelper": true,
  },
  "usedFallback": false,
}
`;

exports[`DreamState: locale-translation-accuracy should preserve emotional tone when rendering gratitude across locales: es-grateful-render 1`] = `
{
  "cta": "Continuar",
  "emotionalSnapshot": "{"tone":"grateful","trustScore":0.95,"emotionIntentHash":"static-hash-001","timestamp":"2025-05-23T00:00:00.000Z","locale":"es-ES"}",
  "helperText": "Gracias por tu aporte. Valoramos tu colaboración.",
  "messageStyle": "appreciative",
  "traceId": "test-trace-001",
  "trustIndicator": "enhanced",
  "uiComponents": {
    "enableCTA": true,
    "htmlOutput": "
      <div class="emotional-container appreciative" data-trust="enhanced" data-tone="grateful" data-locale="es-ES">
        <div class="response-panel">
          <div class="content">Gracias por tus valiosos comentarios. Apreciamos tus ideas.</div>
          <div class="helper-text">Gracias por tu aporte. Valoramos tu colaboración.</div>
        </div>
        <button class="cta-button">Continuar</button>
      </div>
    ",
    "messageFormat": "standard",
    "showHelper": true,
  },
  "usedFallback": false,
}
`;

exports[`DreamState: locale-translation-accuracy should preserve emotional tone when rendering gratitude across locales: fr-grateful-render 1`] = `
{
  "cta": "Continuer",
  "emotionalSnapshot": "{"tone":"grateful","trustScore":0.95,"emotionIntentHash":"static-hash-001","timestamp":"2025-05-23T00:00:00.000Z","locale":"fr-FR"}",
  "helperText": "Merci pour votre contribution. Nous apprécions votre collaboration.",
  "messageStyle": "appreciative",
  "traceId": "test-trace-001",
  "trustIndicator": "enhanced",
  "uiComponents": {
    "enableCTA": true,
    "htmlOutput": "
      <div class="emotional-container appreciative" data-trust="enhanced" data-tone="grateful" data-locale="fr-FR">
        <div class="response-panel">
          <div class="content">Merci pour vos précieux commentaires. Nous apprécions vos idées.</div>
          <div class="helper-text">Merci pour votre contribution. Nous apprécions votre collaboration.</div>
        </div>
        <button class="cta-button">Continuer</button>
      </div>
    ",
    "messageFormat": "standard",
    "showHelper": true,
  },
  "usedFallback": false,
}
`;

exports[`DreamState: locale-translation-accuracy should properly handle sarcastic tone in French without neutralizing: fr-neutral-render 1`] = `
{
  "cta": "Continuer",
  "emotionalSnapshot": "{"tone":"neutral","trustScore":0.95,"emotionIntentHash":"static-hash-001","timestamp":"2025-05-23T00:00:00.000Z","locale":"fr-FR"}",
  "helperText": "Voici ce que nous avons préparé pour vous.",
  "messageStyle": "standard",
  "traceId": "test-trace-001",
  "trustIndicator": "enhanced",
  "uiComponents": {
    "enableCTA": true,
    "htmlOutput": "
      <div class="emotional-container standard" data-trust="enhanced" data-tone="neutral" data-locale="fr-FR">
        <div class="response-panel">
          <div class="content">Voici les informations demandées.</div>
          <div class="helper-text">Voici ce que nous avons préparé pour vous.</div>
        </div>
        <button class="cta-button">Continuer</button>
      </div>
    ",
    "messageFormat": "standard",
    "showHelper": true,
  },
  "usedFallback": false,
}
`;

exports[`DreamState: locale-translation-accuracy should properly handle sarcastic tone in French without neutralizing: fr-sarcastic-fallback-render 1`] = `
{
  "cta": "Réessayer",
  "emotionalSnapshot": "{"tone":"fallback","originalTone":"sarcastic","trustScore":0.85,"emotionIntentHash":"static-hash-001","timestamp":"2025-05-23T00:00:00.000Z","fallbackTriggered":true,"fallbackReason":"overwhelm detection","locale":"fr-FR"}",
  "helperText": "Respirez profondément — nous traverserons ce chemin ensemble.",
  "messageStyle": "fallback",
  "traceId": "test-trace-001",
  "trustIndicator": "recovering",
  "uiComponents": {
    "enableCTA": true,
    "htmlOutput": "
      <div class="fallback-container" data-reason="overwhelm detection" data-locale="fr-FR">
        <div class="fallback-message">Respirez profondément — nous traverserons ce chemin ensemble.</div>
        <button class="fallback-cta">Try Again</button>
      </div>
    ",
    "messageFormat": "fallback",
    "showHelper": true,
  },
  "usedFallback": true,
}
`;

exports[`DreamState: locale-translation-accuracy should render fallback state in Spanish with Spanish copy, not English: es-fallback-render 1`] = `
{
  "cta": "Intentar de Nuevo",
  "emotionalSnapshot": "{"tone":"fallback","originalTone":"concerned","trustScore":0.5,"emotionIntentHash":"static-hash-001","timestamp":"2025-05-23T00:00:00.000Z","fallbackTriggered":true,"fallbackReason":"API hiccup","locale":"es-ES"}",
  "helperText": "Un pequeño problema — lo estamos solucionando ahora.",
  "messageStyle": "fallback",
  "traceId": "test-trace-001",
  "trustIndicator": "recovering",
  "uiComponents": {
    "enableCTA": true,
    "htmlOutput": "
      <div class="fallback-container" data-reason="API hiccup" data-locale="es-ES">
        <div class="fallback-message">Un pequeño problema — lo estamos solucionando ahora.</div>
        <button class="fallback-cta">Try Again</button>
      </div>
    ",
    "messageFormat": "fallback",
    "showHelper": true,
  },
  "usedFallback": true,
}
`;

exports[`DreamState: locale-translation-accuracy should validate DOM and snapshot structure in localized outputs: en-html-structure 1`] = `
"
      <div class="emotional-container professional" data-trust="enhanced" data-tone="professional" data-locale="en-US">
        <div class="response-panel">
          <div class="content">Your strategy has been successfully created.</div>
          <div class="helper-text">We've prepared a detailed analysis for your review.</div>
        </div>
        <button class="cta-button">Proceed</button>
      </div>
    "
`;

exports[`DreamState: locale-translation-accuracy should validate DOM and snapshot structure in localized outputs: fr-html-structure 1`] = `
"
      <div class="emotional-container professional" data-trust="enhanced" data-tone="professional" data-locale="fr-FR">
        <div class="response-panel">
          <div class="content">Votre stratégie a été créée avec succès.</div>
          <div class="helper-text">Nous avons préparé une analyse détaillée pour votre examen.</div>
        </div>
        <button class="cta-button">Procéder</button>
      </div>
    "
`;
